--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
 
 <section class="page-home container-fluid m-b-3 p-t-1">
   <div class="row m-x-0">
-    {% for store in super_store  limit: 10 %}
+    {% for store in super_store reversed limit: 10 %}
       <div class="col-md-4 p-b-1">
         <div class="card card-block m-b-0">
           <h4 class="card-title m-b-0">
